# bghrana

./: .cpanel.yml  .env.example  .gitignore  .htaccess  DEPLOYMENT.md  Dockerfile  NEW_FEATURES.md  Passengerfile.json  README.md  add_category_columns.py  add_location_slug_columns.py  apply_migrations.py  apply_working_email.py  check_allauth_templates.py  check_allauth_urls.py  check_category_seo_data.py  check_category_sql.py  check_code.py  check_email_registration.py  check_latest_error.py  check_login_errors.py  check_logs_and_site.py  check_media_files.py  check_migrations.py  check_password_reset_error.py  check_product_images.py  check_provider_names.py  check_public_html.py  check_registration_error.py  check_share_buttons.py  check_sites_config.py  check_socialapp.py  check_static_config.py  check_username_conflict.py  cleanup_users.py  clear_cache.py  code_audit_report.md  configure_email_console.py  configure_real_email.py  copy_to_public_html.py  (+88 more)
catalog/: adapters.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py  views_seo.py
catalog/migrations/: 0001_initial.py  0002_category_parent.py  0003_city_region_product_city_city_region_and_more.py  0004_product_owner_alter_product_description_productimage.py  0005_userprofile.py  0006_product_phone.py  0007_product_babh_number.py  0008_remove_product_image.py  0009_product_expiry_reminder_sent.py  0011_product_messenger_link.py  0012_seopage_category_seo_description_category_seo_text_and_more.py  0013_add_cta_button_fields.py
products/: middleware.py  settings.py  urls.py
(+55 files in other folders)
